banner Html and _banner Scss

--- a/integration/index.html
+++ b/integration/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="./scss/main.scss">
     <title>oProfile</title>
 </head>
-<body>
-    <h1>Bienvenue sur oProfiles</h1>
-    <p>Test Réactivité</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deleniti dolore, ratione error sapiente delectus alias recusandae illo nobis consequuntur exercitationem beatae sequi provident earum ab tempore est sed dolorum!</p>
+<body> 
+
+    <section class="banner">
+        <header class="banner__header">
+            <h2 class="banner__header__title">Bienvenue sur oProfiles</h2>
+        </header>
+        <main class="banner__main">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eaque ab ea? Repellendus placeat id sint quos dolorem quis ducimus blanditiis. Possimus hic pariatur harum mollitia? Vel esse delectus porro!</p>
+        </main>
+        <footer class="banner__footer"></footer>
+    </section>  
 
     <script src="./js/main.js"></script>
 </body>
