open and close main menu

--- a/integration/index.html
+++ b/integration/index.html
@@ -118,7 +118,7 @@
         </section>
     </main>
     <div class="overlay main-menu">
-        <a href="#" class="main-menu-action close-main-menu">❌</a>
+        <a href="#" class="main-menu-action close-main-menu">&#10006;</a>
     </div>
     <script src="./js/main.js"></script>
 </body>
